[package]
name = "pngcrypt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8.1"
clap = { version = "3.0.6", features = ["derive"] }
rand = "0.8.4"
colored = "2"
anyhow = "1.0"
thiserror = "1.0"